Added checkstyle rules